# Stellar-Dapp

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
contracts/service-escrow/: Cargo.toml
contracts/service-escrow/src/: lib.rs
contracts/service-escrow/test_snapshots/test/: cancel_refunds_client_and_blocks_second_action.1.json  create_job_locks_funds_in_contract.1.json  rejects_zero_amount_jobs.1.json  release_pays_provider.1.json
src/: App.tsx  styles.css
src/lib/: cache.test.ts  cache.ts  config.ts  format.test.ts  format.ts  stellar.ts  types.ts
